# httpanalyzer

./: .gitignore  LICENSE.txt  README.md  example.py  pyproject.toml
src/httpanalyzer/: __init__.py  src.py  utils.py
src/httpanalyzer/lists/: path_spam1.txt
