[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "httpanalyzer"
version = "0.1.0"
authors = [
  { name="Martin Merkli", email="martin.merkli@protonmail.com" },
]
description = "Library for analyzing http-requests"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators"
]

[project.urls]
"Homepage" = "https://github.com/MartinMerkli/httpanalyzer"
"Bug Tracker" = "https://github.com/MartinMerkli/httpanalyzer/issues"
