[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "httpanalyzer"
version = "0.1.1"
authors = [
  { name="Martin Merkli", email="martin.merkli@protonmail.com" },
]
description = "Library for analyzing http-requests"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.6"
keywords = ['python', 'http']
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators"
]

[project.urls]
homepage = "https://github.com/MartinMerkli/httpanalyzer"
repository = "https://github.com/MartinMerkli/httpanalyzer"
